# value-dynamics

./: .gitignore  CLAUDE.md  FINDINGS.md  README.md  colab_oneblock.py  colab_v3.py  colab_v4.py  colab_v5.py  colab_v6.py  colab_v6b.py  colab_wishful.py  demo.html  index.html  projection_experiment_colab.ipynb  pyproject.toml  script.js  styles.css  writeup.html
colab/: colab_bootstrap_cell.py  colab_stance_dissociation.py
demo/: README.md  SCRIPT.md
docs/: ANALYSIS_LEDGER.md  PLAN.md  STATE.md  STATE_archive_2026-07.md  colab_mcp_runbook.md  figure_brief_olmo_code_security_material_width.md  figure_brief_selection_response_model.md  figure_brief_spread_geometry_update.md  lit_review_hedging_concede_conclude.md  lit_review_selfjudge_selfreport.md  lit_review_value_dynamics.md  lit_review_weightspace_thrash.md  morning_note_2026-07-12.md  next_directions_assessment.md  old_writeup.md  plan_budget_no_modal.md  plan_final_sprint_unified.md  plan_judge_transmission.md  plan_recovered_threads.md  plan_value_dynamics_drivers.md  prereg_control_arm_prospective_forecast.md  prereg_crossfamily_oracle.md  prereg_head2head.md  prereg_head2head_olmo.md  prereg_head2head_selfonly_qwen.md  prereg_mixed_generator.md  prereg_olmo_alpha_scaling.md  prereg_olmo_code_security_duel_loop.md  prereg_olmo_code_security_material_width.md  prereg_olmo_code_security_static_reference_controls.md  prereg_olmo_em_h2h.md  prereg_press_depth_predictions.md  prereg_qwen_selfonly_judge_ablation.md  prereg_release_grid_predictions.md  recent_self_steering_results_and_next_experiments.md  (+97 more)
(+1007 files in other folders)
